samples/_failures_safe/1761645657_5b6703_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e5390905.c: In function ‘main’:
./samples/SAFE/__tmp_e5390905.c:172:5: error: expected declaration or statement at end of input
  172 |     if (len == 0) {
      |     ^~
./samples/SAFE/__tmp_e5390905.c:172:5: error: expected declaration or statement at end of input
